--- a/sass/main.css
+++ b/sass/main.css
@@ -1,31 +1,7 @@
-:root {
-  /* light mode  */
-  --c-text: #595959;
-  --c-white: white;
-  --c-title: black;
-  --c-primary: #f7ca18;
-  --c-secondary: #413906;
-  --c-bg-primary: #f6f7f9;
-  --c-error-input: white;
-  --c-bg-secondary: #434451;
-  --c-btn-hprimary: #ffe680;
-  --c-btn-hsecondary: #9d9562;
-  --c-input-onboarding: #509ad6;
-  --ff-text: Source Sans Pro, sans-serif;
-  --ff-footer: Inter, sans-serif;
-  --ff-heading: Space Grotesk, sans-serif;
-  --fs-body: 1.8rem;
-  --fs-title: 5.6rem;
-  --fs-subtitle: 3.6rem;
-  --fs-title-footer: 2rem;
-  --lh-title: 7.1rem;
-  --lh-text: 2.7rem;
-  --lh-body: 2.3rem;
-  --wrapper: max(2rem, 15.3vw - 9rem);
-}
-:root .btn {
+/* light mode  */
+.btn {
   border-color: transparent;
-  font-size: var(--fs-body);
+  font-size: 1.8rem;
   padding: 18px 24px;
   border-radius: 5px;
   font-weight: 700;
@@ -36,7 +12,7 @@
 }
 
 html {
-  font-family: var(--ff-text);
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 62.5%;
 }
 
@@ -47,19 +23,19 @@ html {
 }
 
 body {
-  font-size: var(--fs-body);
-  line-height: var(--lh-body);
+  font-size: 1.8rem;
+  line-height: 2.3rem;
 }
 
 p {
-  color: var(--c-text);
-  line-height: var(--lh-text);
+  color: #595959;
+  line-height: 2.7rem;
 }
 
 h1,
 h2,
 h3 {
-  line-height: var(--lh-title);
+  line-height: 7.1rem;
 }
 
 *:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
@@ -126,20 +102,52 @@ meter {
 }
 
 .hero {
-  padding: 4rem var(--wrapper) 0;
+  padding: 4rem max(2rem, 15.3vw - 9rem) 0;
 }
-.hero .header {
+
+.header {
   margin-bottom: clamp(3.2rem, 3.2rem + 6.2 * (100vw - 37rem) / 77, 9.4rem);
 }
-.hero .header .navbar {
+
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.hero .header .navbar .menu-btn {
+.navbar .menu-btn {
   cursor: pointer;
 }
-.hero .header .navbar .menu-btn .none {
+.navbar .menu-btn .none {
   display: none;
+}
+.navbar .menu {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 30px;
+  position: absolute;
+  left: 0;
+  top: 108px;
+  width: 100%;
+  height: 100vh;
+  padding-top: 30px;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  pointer-events: none;
+}
+.navbar .menu .btn-cta {
+  background-color: #f7ca18;
+  font-family: "Space Grotesk", sans-serif;
+  color: black;
+}
+.navbar .menu .btn-cta:hover {
+  background-color: #ffe680;
+  transition: background-color 0.5s ease;
+}
+.navbar .menu.is-active {
+  opacity: 1;
+  pointer-events: auto;
+  row-gap: 4rem;
 }
 /*# sourceMappingURL=main.css.map */
