--- a/sass/components/_globals.scss
+++ b/sass/components/_globals.scss
@@ -1,83 +1,92 @@
-@use 'variables' as *;
+@use "variables" as *;
 
 //reset
 html {
-    font-family: $ff-text;
-    font-size: 62.5%
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    font-size: $fs-body;
-    line-height: $lh-body;
-  }
-  
-  p {
-    color: $c-text;
-    line-height: $lh-text; 
-  }
-  
-  h1,
-  h2,
-  h3 {
-      line-height: $lh-title;
-  }
-  
-  *:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
-      all: unset;
-      display: revert;
-  }
-  
-  *,
-  *::before,
-  *::after {
-      box-sizing: border-box;
-  }
-  
-  a, button {
-      cursor: revert;
-  }
-  
-  ol, ul, menu {
-      list-style: none;
-  }
-  
-  img {
-      max-width: 100%;
-  }
-  
-  table {
-      border-collapse: collapse;
-  }
-  
-  textarea {
-      white-space: revert;
-  }
-  
-  meter {
-      -webkit-appearance: revert;
-      appearance: revert;
-  }
-  
-  ::placeholder {
-      color: unset;
-  }
-  
-  :where([hidden]) {
-      display: none;
-  }
-  
-  :where([contenteditable]) {
-      -moz-user-modify: read-write;
-      -webkit-user-modify: read-write;
-      overflow-wrap: break-word;
-  }
-  
-  :where([draggable="true"]) {
-      -webkit-user-drag: element;
-  }
+  font-family: $ff-text;
+  font-size: 62.5%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-size: $fs-body;
+  line-height: $lh-body;
+}
+
+p {
+  color: $c-text;
+  line-height: $lh-text;
+}
+
+h1 {
+  font-size: $fs-title;
+}
+
+h1,
+h2,
+h3 {
+  font-family: $ff-heading;
+  line-height: $lh-title;
+  font-weight: bold;
+}
+
+*:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
+  all: unset;
+  display: revert;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+a,
+button {
+  cursor: revert;
+}
+
+ol,
+ul,
+menu {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+textarea {
+  white-space: revert;
+}
+
+meter {
+  -webkit-appearance: revert;
+  appearance: revert;
+}
+
+::placeholder {
+  color: unset;
+}
+
+:where([hidden]) {
+  display: none;
+}
+
+:where([contenteditable]) {
+  -moz-user-modify: read-write;
+  -webkit-user-modify: read-write;
+  overflow-wrap: break-word;
+}
+
+:where([draggable="true"]) {
+  -webkit-user-drag: element;
+}
