--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -77,5 +77,8 @@ $breakpoints: (
     font-weight: 700;
     max-width: max-content;
     cursor: pointer;
+    display: flex;
+    column-gap: 16px;
+    align-items: center;
   }
 
