--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
 @use 'components/globals';
 @use 'components/variables';
 @use 'components/hero';
+@use 'components/collaboration';
+@use 'components/testimonial';
