--- a/sass/main.css
+++ b/sass/main.css
@@ -1,4 +1,8 @@
 /* light mode  */
+.wrapper {
+  padding-inline: max(2rem, 15.3vw - 9rem);
+}
+
 .btn {
   border-color: transparent;
   font-size: 1.8rem;
@@ -38,13 +42,18 @@ p {
 
 h1 {
   font-size: 5.6rem;
+  line-height: 7.1rem;
+}
+
+h2 {
+  font-size: 3.6rem;
+  line-height: 4.6rem;
 }
 
 h1,
 h2,
 h3 {
   font-family: "Space Grotesk", sans-serif;
-  line-height: 7.1rem;
   font-weight: bold;
 }
 
@@ -115,7 +124,7 @@ meter {
 }
 
 .hero {
-  padding: 4rem max(2rem, 15.3vw - 9rem) 4rem;
+  padding: 4rem max(2rem, 15.3vw - 9rem) 0;
 }
 
 .header {
@@ -139,10 +148,10 @@ meter {
   row-gap: 4rem;
   position: absolute;
   left: 0;
-  top: 108px;
+  top: 10vh;
   width: 100%;
-  height: 100vh;
-  padding-top: 30px;
+  height: 90vh;
+  padding-top: 10%;
   opacity: 0;
   transition: opacity 0.5s ease;
   pointer-events: none;
@@ -174,6 +183,7 @@ meter {
 }
 .navbar .menu.is-active {
   opacity: 1;
+  z-index: 1;
   pointer-events: auto;
   background-color: white;
 }
@@ -207,10 +217,23 @@ meter {
   }
 }
 
-.banner-img {
-  max-width: 63.4rem;
+.banner {
+  display: flex;
+  flex-direction: column;
+  row-gap: 4rem;
 }
 
+.banner-img {
+  max-width: 37.8rem;
+  margin: 0 auto;
+}
+
+.banner-description h1 {
+  margin-bottom: 4vh;
+}
+.banner-description p {
+  margin-bottom: 2.4rem;
+}
 .banner-description .cursor {
   position: relative;
 }
@@ -218,5 +241,69 @@ meter {
   content: url(/Assets/never-highlight.svg);
   position: absolute;
   left: -0.7rem;
+}
+.banner-description .btn-cta {
+  background-color: #f7ca18;
+  font-family: "Space Grotesk", sans-serif;
+  color: black;
+}
+.banner-description .btn-cta:hover {
+  background-color: #ffe680;
+  transition: background-color 0.5s ease;
+}
+
+@media screen and (min-width: 62.438rem) {
+  .banner {
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
+  .banner-img {
+    order: 1;
+    margin: initial;
+    max-width: 47.7rem;
+  }
+  .banner-description {
+    flex-basis: 40vw;
+  }
+}
+.collaboration {
+  display: flex;
+  row-gap: 3.2rem;
+  flex-direction: column;
+  margin-top: clamp(7.8rem, 7.8rem + 4.4 * (100vw - 37rem) / 77, 12.2rem);
+}
+@media screen and (min-width: 62.438rem) {
+  .collaboration {
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
+  .collaboration-img {
+    order: 1;
+    margin: initial;
+    max-width: 51.4rem;
+  }
+  .collaboration-description {
+    flex-basis: 35vw;
+  }
+}
+
+.collaboration-description h2 {
+  margin-bottom: 8px;
+}
+.collaboration-description p {
+  margin-bottom: 2.4rem;
+}
+.collaboration-description a {
+  font-weight: 700;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  text-underline-offset: 0.3rem;
+}
+.collaboration-description a:hover {
+  -webkit-text-decoration: underline #f7ca18 0.5rem;
+          text-decoration: underline #f7ca18 0.5rem;
+  text-underline-offset: 0.5rem;
 }
 /*# sourceMappingURL=main.css.map */
