--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -24,10 +24,8 @@ $fs-subtitle: 3.6rem;
 $fs-title-footer: 2rem;
 
 //line-height
-$lh-subtitle: 4.6rem;
-$lh-title: 7.1rem;
-$lh-text: 2.7rem;
-$lh-body: 2.3rem;
+$lh-text: 1.5;
+$lh-body: 1.3;
 
 // margin
 $mg-x1: 8px; 
