--- a/sass/main.css
+++ b/sass/main.css
@@ -32,22 +32,20 @@ html {
 
 body {
   font-size: 1.8rem;
-  line-height: 2.3rem;
+  line-height: 1.3;
 }
 
 p {
   color: #595959;
-  line-height: 2.7rem;
+  line-height: 1.5;
 }
 
 h1 {
   font-size: 5.6rem;
-  line-height: 7.1rem;
 }
 
 h2 {
   font-size: 3.6rem;
-  line-height: 4.6rem;
 }
 
 h1,
@@ -305,5 +303,53 @@ meter {
   -webkit-text-decoration: underline #f7ca18 0.5rem;
           text-decoration: underline #f7ca18 0.5rem;
   text-underline-offset: 0.5rem;
+}
+
+.testimonial {
+  display: flex;
+  row-gap: 3.2rem;
+  margin-top: 8rem;
+  flex-direction: column;
+  margin-bottom: clamp(3rem, 3rem + 5 * (100vw - 37rem) / 77, 8rem);
+}
+.testimonial-description h2 {
+  margin-bottom: 8px;
+}
+.testimonial-description p {
+  margin-bottom: 1.6rem;
+}
+
+.testimonial-rating {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.4rem;
+}
+.testimonial-rating .data {
+  font-weight: 700;
+  margin-right: 0.5rem;
+}
+.testimonial-rating .data-text {
+  color: #595959;
+  margin-right: 1.6rem;
+}
+.testimonial-rating .avatars {
+  display: flex;
+}
+.testimonial-rating .avatars img:not(:first-of-type) {
+  margin-left: -20px;
+}
+.testimonial-rating .avatars img {
+  border: 2px solid white;
+  border-radius: 50%;
+}
+
+.user {
+  display: flex;
+}
+.user .user-avatar {
+  max-width: 9.8rem;
+}
+.user .user-description {
+  background-color: #f6f7f9;
 }
 /*# sourceMappingURL=main.css.map */
