--- a/sass/main.css
+++ b/sass/main.css
@@ -36,7 +36,7 @@ body {
 }
 
 p {
-  color: #595959;
+  color: #545454;
   line-height: 1.5;
 }
 
@@ -171,7 +171,7 @@ meter {
 }
 .navbar .menu-links li {
   font-family: "Space Grotesk", sans-serif;
-  color: #595959;
+  color: #545454;
   font-weight: 500;
 }
 .navbar .menu-links a:hover {
@@ -318,6 +318,32 @@ meter {
 .testimonial-description p {
   margin-bottom: 1.6rem;
 }
+.testimonial-users {
+  display: grid;
+  row-gap: clamp(2.2rem, 2.2rem + 1.8 * (100vw - 37rem) / 77, 4rem);
+}
+.testimonial-users article:last-of-type {
+  margin-left: auto;
+}
+@media screen and (min-width: 43.688rem) {
+  .testimonial-users {
+    margin-inline: 45px;
+  }
+}
+@media screen and (min-width: 62.438rem) {
+  .testimonial {
+    flex-direction: row;
+    align-items: center;
+  }
+  .testimonial-description {
+    order: 1;
+    margin-left: 3rem;
+  }
+  .testimonial-users {
+    margin-inline: 0;
+    width: 100%;
+  }
+}
 
 .testimonial-rating {
   display: flex;
@@ -329,7 +355,7 @@ meter {
   margin-right: 0.5rem;
 }
 .testimonial-rating .data-text {
-  color: #595959;
+  color: #545454;
   margin-right: 1.6rem;
 }
 .testimonial-rating .avatars {
@@ -342,14 +368,39 @@ meter {
   border: 2px solid white;
   border-radius: 50%;
 }
+@media screen and (min-width: 62.438rem) {
+  .testimonial-rating span:first-of-type {
+    order: 1;
+    margin-left: 1.6rem;
+  }
+}
 
 .user {
   display: flex;
+  position: relative;
+  align-items: center;
 }
 .user .user-avatar {
-  max-width: 9.8rem;
+  position: absolute;
+  width: clamp(5.7rem, 5.7rem + 4.1 * (100vw - 37rem) / 77, 9.8rem);
 }
 .user .user-description {
+  display: grid;
+  border-radius: 10px;
+  margin-left: clamp(2.8rem, 2.8rem + 2.2 * (100vw - 37rem) / 77, 5rem);
+  width: clamp(26.6rem, 26.6rem + 18.2 * (100vw - 37rem) / 77, 44.8rem);
+  row-gap: clamp(1.4rem, 1.4rem + 0.2 * (100vw - 37rem) / 77, 1.6rem);
   background-color: #f6f7f9;
+  padding-inline: clamp(4rem, 4rem + 3 * (100vw - 37rem) / 77, 7rem);
+  padding-block: clamp(1.5rem, 1.5rem + 0.9 * (100vw - 37rem) / 77, 2.4rem);
+}
+.user .user-description p {
+  font-size: clamp(1.2rem, 1.2rem + 0.6 * (100vw - 37rem) / 77, 1.8rem);
+  font-family: "Space Grotesk", sans-serif;
+  line-height: 1.3;
+  font-weight: 500;
+}
+.user .user-description p span {
+  color: black;
 }
 /*# sourceMappingURL=main.css.map */
