--- a/sass/main.css
+++ b/sass/main.css
@@ -3,6 +3,10 @@
   padding-inline: max(2rem, 15.3vw - 9rem);
 }
 
+.sr-only {
+  display: none;
+}
+
 .btn {
   border-color: transparent;
   font-size: 1.8rem;
@@ -36,7 +40,7 @@ body {
 }
 
 p {
-  color: #545454;
+  color: #3b3b3b;
   line-height: 1.5;
 }
 
@@ -171,7 +175,7 @@ meter {
 }
 .navbar .menu-links li {
   font-family: "Space Grotesk", sans-serif;
-  color: #545454;
+  color: #3b3b3b;
   font-weight: 500;
 }
 .navbar .menu-links a:hover {
@@ -355,7 +359,7 @@ meter {
   margin-right: 0.5rem;
 }
 .testimonial-rating .data-text {
-  color: #545454;
+  color: #3b3b3b;
   margin-right: 1.6rem;
 }
 .testimonial-rating .avatars {
@@ -402,5 +406,75 @@ meter {
 }
 .user .user-description p span {
   color: black;
+}
+
+.newsletter {
+  margin-bottom: 10rem;
+  background-color: #f7ca18;
+  display: flex;
+  flex-direction: column;
+  row-gap: 3.2rem;
+}
+.newsletter-text {
+  padding-top: 6.3rem;
+}
+.newsletter-text h2 {
+  margin-bottom: 8px;
+}
+.newsletter-text p {
+  margin-bottom: 1.6rem;
+}
+.newsletter-form {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 8px;
+  flex-direction: column;
+}
+.newsletter-form input {
+  padding: 1.8rem 6.4rem 1.8rem 3.6rem;
+  background-color: white;
+  border-radius: 5px;
+}
+.newsletter-form input[placeholder] {
+  color: #413906;
+}
+.newsletter-form .btn-cta {
+  background-color: #413906;
+  font-family: "Source Sans Pro", sans-serif;
+  color: white;
+  max-width: 100%;
+  justify-content: center;
+}
+.newsletter-form .btn-cta:hover {
+  color: black;
+  background-color: #9d9562;
+  transition: background-color 0.5s ease;
+}
+.newsletter-img {
+  max-width: 46rem;
+  display: flex;
+  margin-inline: auto;
+}
+@media screen and (min-width: 43.688rem) {
+  .newsletter {
+    row-gap: 3.8rem;
+  }
+  .newsletter-form {
+    flex-direction: row;
+    -moz-column-gap: 16px;
+         column-gap: 16px;
+  }
+}
+@media screen and (min-width: 62.438rem) {
+  .newsletter {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .newsletter-text {
+    flex-basis: 46%;
+  }
+  .newsletter-img {
+    margin: initial;
+  }
 }
 /*# sourceMappingURL=main.css.map */
