content links footer

--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -11,6 +11,7 @@ $c-bg-primary: hsla(220, 18%, 97%, 1);
 $c-bg-secondary: hsla(235, 9%, 29%, 1);
 $c-btn-hprimary: hsla(48, 100%, 75%, 1);
 $c-btn-hsecondary: hsla(52, 23%, 50%, 1);
+$c-card-text-cta: hsla(223, 7%, 79%, 1); 
 
 // Font family
 $ff-footer: "Inter", sans-serif;
@@ -34,6 +35,10 @@ $mg-x2: 1.6rem;
 $mg-x3: 2.4rem;
 $mg-x4: 3.2rem;
 
+// border-radius
+$br-small: 5px;
+$br-big: 10px; 
+
 // wrapper
 $wrapper: max(2rem, 15.3vw - 18rem / 2);
 
@@ -55,7 +60,9 @@ $breakpoints: (
 
   //button
   @mixin button-bg($bg) {
+    justify-content: center;
     background-color: $bg;
+    max-width: 100%;
 
     @if $bg == $c-primary {
       font-family: $ff-heading;
