--- a/sass/components/_pricing.scss
+++ b/sass/components/_pricing.scss
@@ -2,6 +2,7 @@
 
 .pricing {
   display: flex;
+  row-gap: 4px;
   flex-wrap: wrap;
   margin-top: clamp(
     0.2rem,
@@ -12,8 +13,12 @@
 }
 
 .pricing-card {
-  flex: 1 1 35.3rem;
-  padding: 3.6rem;
+  flex: 1 1 260px;
+
+  .card-wrapper {
+    display: grid;
+    padding: 3.6rem;
+  }
 
   .card-title {
     margin-bottom: $mg-x1;
@@ -22,7 +27,6 @@
     span {
       font-weight: 500;
       font-size: $fs-body;
-      color: $c-text;
     }
   }
 
@@ -32,8 +36,9 @@
   }
 
   .card-list {
-      display: grid;
-      row-gap: 1.7rem;
+    display: grid;
+    row-gap: $mg-x2;
+    font-family: $ff-heading;
 
     li {
       display: flex;
@@ -44,9 +49,62 @@
 
   .btn-cta {
     @include button-bg($c-primary);
-    width: 100%;
-    justify-content: center;
   }
 }
 
+.card-cta {
+  background-color: $c-bg-secondary;
+  border-radius: $br-big;
 
+  .span-text,
+  p {
+    color: $c-card-text-cta;
+  }
+
+  .card-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: $mg-x2;
+    column-gap: $mg-x3;
+  }
+}
+
+@include breakpoint(medium) {
+  .pricing {
+    &-card:nth-of-type(1) > .card-wrapper {
+      padding-left: 0;
+    }
+
+    &-card:nth-of-type(2) {
+      order: 1;
+    }
+
+    &-card:nth-of-type(3) > .card-wrapper {
+      padding-right: 0;
+    }
+  }
+}
+
+@include breakpoint(large) {
+  .pricing {
+    column-gap: 4rem;
+
+    &-card:nth-of-type(1) > .card-wrapper {
+      padding-left: 3.6rem;
+    }
+
+    &-card:nth-of-type(2) {
+      order: 0;
+    }
+
+    &-card:nth-of-type(3) > .card-wrapper {
+      padding-right: 3.6rem;
+    }
+  }
+
+  .card-cta {
+    .card-list {
+      display: inherit;
+    }
+  }
+}
