--- a/sass/main.css
+++ b/sass/main.css
@@ -11,6 +11,14 @@
   font-size: 5.6rem !important;
 }
 
+.logo {
+  height: 2.6rem;
+}
+
+.visually-hidden {
+  display: none;
+}
+
 .btn {
   border-color: transparent;
   font-size: 1.8rem;
@@ -56,9 +64,13 @@ h2 {
   font-size: 3.6rem;
 }
 
-h1,
-h2,
 h3 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+h1,
+h2 {
   font-family: "Space Grotesk", sans-serif;
   font-weight: bold;
 }
@@ -581,6 +593,89 @@ meter {
 
   .card-cta .card-list {
     display: inherit;
+  }
+}
+.footer-nav {
+  background-color: #f7ca18;
+  padding-bottom: 2.4rem;
+}
+
+.footer-text {
+  display: grid;
+  row-gap: 1.6rem;
+  padding-top: 2rem;
+}
+
+.footer-links {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 2.4rem;
+  -moz-column-gap: 5rem;
+       column-gap: 5rem;
+  margin-top: 3.7rem;
+  justify-content: space-between;
+}
+
+.link {
+  font-family: "Inter", sans-serif;
+}
+.link h3 {
+  margin-bottom: 1.6rem;
+  line-height: 1.2;
+}
+.link ul {
+  display: grid;
+  row-gap: 8px;
+}
+.link ul a {
+  line-height: 1.5;
+}
+
+.footer-contact {
+  display: flex;
+  color: #f7ca18;
+  padding-block: 1rem;
+  background-color: #413906;
+  justify-content: space-between;
+}
+
+.contacts {
+  display: flex;
+  -moz-column-gap: 1.6rem;
+       column-gap: 1.6rem;
+}
+.contacts-social {
+  display: flex;
+  -moz-column-gap: 16px;
+       column-gap: 16px;
+}
+
+@media screen and (min-width: 43.688rem) {
+  .footer-nav {
+    padding-bottom: 6rem;
+  }
+
+  .footer-text {
+    padding-top: 6rem;
+  }
+
+  .footer-links {
+    margin-top: 2.3rem;
+  }
+}
+@media screen and (min-width: 62.438rem) {
+  .footer-nav {
+    display: flex;
+    padding-bottom: 4.8rem;
+    justify-content: space-between;
+  }
+
+  .footer-text {
+    flex-basis: 40%;
+  }
+
+  .footer-links {
+    margin-top: 4.8rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
