--- a/sass/main.css
+++ b/sass/main.css
@@ -662,6 +662,11 @@ meter {
   .footer-links {
     margin-top: 2.3rem;
   }
+
+  .contacts {
+    -moz-column-gap: 3.6rem;
+         column-gap: 3.6rem;
+  }
 }
 @media screen and (min-width: 62.438rem) {
   .footer-nav {
