--- a/sass/main.css
+++ b/sass/main.css
@@ -683,4 +683,8 @@ meter {
     margin-top: 4.8rem;
   }
 }
+.header-blog {
+  padding-inline: clamp(1.125rem, 1.125rem + (1vw - 0.48rem) * 11.4583, 9.375rem);
+  padding-block: clamp(1.125rem, 1.125rem + (1vw - 0.48rem) * 1.9097, 2.5rem);
+}
 /*# sourceMappingURL=main.css.map */
