--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,4 @@
 @use 'components/newsletter';
 @use 'components/pricing'; 
 @use 'components/footer';
-@use 'components/hero-pricing';
+@use 'components/header-blog';
