--- a/sass/components/_header-blog.scss
+++ b/sass/components/_header-blog.scss
@@ -1,8 +1,8 @@
 @use "variables" as *;
 
 .header-blog {
-    padding-inline: clamp(1.125rem, calc(1.125rem + ((1vw - 0.48rem) * 11.4583)), 9.375rem);
-    padding-block: clamp(1.125rem, calc(1.125rem + ((1vw - 0.48rem) * 1.9097)), 2.5rem);
+    padding-inline: max(2rem, 15.6vw - 7.5rem);
+    padding-block: clamp(2rem, calc(2rem + (4 - 2) * ((100vw - 37rem) / (114 - 37))), 4rem);
     
 }
 
