--- a/sass/main.css
+++ b/sass/main.css
@@ -684,7 +684,7 @@ meter {
   }
 }
 .header-blog {
-  padding-inline: clamp(1.125rem, 1.125rem + (1vw - 0.48rem) * 11.4583, 9.375rem);
+  padding-inline: max(2rem, 15.6vw - 7.5rem);
   padding-block: clamp(1.125rem, 1.125rem + (1vw - 0.48rem) * 1.9097, 2.5rem);
 }
 /*# sourceMappingURL=main.css.map */
