--- a/sass/main.css
+++ b/sass/main.css
@@ -11,12 +11,15 @@
   font-size: 5.6rem !important;
 }
 
-.logo {
-  height: 2.6rem;
-}
-
 .visually-hidden {
   display: none;
+}
+
+.flex-items {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
 }
 
 .btn {
@@ -139,6 +142,12 @@ meter {
 
 :where([draggable="true"]) {
   -webkit-user-drag: element;
+}
+
+.button-toggle {
+  background-color: #f6f7f9;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 
 .hero {
@@ -685,6 +694,19 @@ meter {
 }
 .header-blog {
   padding-inline: max(2rem, 15.6vw - 7.5rem);
-  padding-block: clamp(1.125rem, 1.125rem + (1vw - 0.48rem) * 1.9097, 2.5rem);
+  padding-block: clamp(2rem, 2rem + 2 * (100vw - 37rem) / 77, 4rem);
+}
+
+.flex-items {
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
+  color: #3b3b3b;
+}
+.flex-items li:last-child {
+  margin-left: auto;
+}
+.flex-items li:first-child {
+  display: inline-block;
+  height: 27px;
 }
 /*# sourceMappingURL=main.css.map */
