--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
-@use 'components/globals';
+@use 'components/globals';  
 @use 'components/variables';
+@use 'components/button-toggle';
 @use 'components/hero';
 @use 'components/collaboration';
 @use 'components/testimonial';
