--- a/sass/components/_header-blog.scss
+++ b/sass/components/_header-blog.scss
@@ -2,15 +2,10 @@
 @use "button-toggle" as *;
 
 .header-blog {
-  padding-inline: max(2rem, 15.6vw - 7.5rem);
-  padding-block: clamp(
-    2rem,
-    calc(2rem + (4 - 2) * ((100vw - 37rem) / (114 - 37))),
-    4rem
-  );
+  padding-block: var(--wrapper-block); 
 }
 
-.flex-items {
+.nav {
   font-family: $ff-heading;
   font-weight: 500;
   color: $c-text; 
